<resources>
    <string name="app_name">Mobile Ranger</string>

    <!--Form Entry Strings-->
    <string name="global_location">Location</string>
    <string name="form_date_title">Date</string>
    <string name="form_reporting_employee_title">Reporting Employee</string>
    <string name="form_details_title">Details</string>
    <string name="form_action_taken_title">Action Taken</string>
    <string name="form_photos_title">Photos</string>
    <string name="form_before_title">Before Photo</string>
    <string name="form_after_title">After Photo</string>
    <string name="form_take_photo">Take Photo</string>
    <string name="button_date_picker">Set Date</string>

    <!--PDF Strings-->
    <string name="pdf_title">Colorado Bend SP - Hazard Tree Report</string>

    <!--Report List String-->
    <string name="button_new_form">New Form</string>
    <string name="no_date_title">No Date</string>

    <!--Delete Dialog-->
    <string name="dialog_delete_title">Delete Form</string>
    <string name="dialog_delete_text">You are about to delete all the contents of this form. Are you sure?</string>
    <string name="delete_button_text">Delete Forever</string>
    <string name="delete_cancel_text">Cancel</string>



</resources>
