<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    >
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">


        <TextView
            android:id="@+id/locationTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/global_location" />

        <EditText
            android:id="@+id/locationEdit"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:lines="1"
            android:inputType="text"
            android:imeOptions="actionNext"/>

    </LinearLayout>

    <TextView
        android:id="@+id/detailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form_details_title" />

    <EditText
        android:id="@+id/detailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/actingTakenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form_action_taken_title" />

    <EditText
        android:id="@+id/actionTakenText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:inputType="textMultiLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/beforePhotoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/form_before_title" />

            <ImageView
                android:id="@+id/beforeImage"
                android:layout_width="match_parent"
                android:layout_height="@dimen/form_image_width"

                android:background="#FFFFFF" />

            <Button
                android:id="@+id/buttonBefore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/form_take_photo" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/afterPhotoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/form_after_title" />

            <ImageView
                android:id="@+id/afterImage"
                android:layout_width="match_parent"
                android:layout_height="@dimen/form_image_width"
                android:layout_gravity="center"
                android:background="#FFFFFF" />

            <Button
                android:id="@+id/buttonAfter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/form_take_photo" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
</android.support.v7.widget.CardView>